fix text align on footer

--- a/src/components/layouts/footer/footer.css
+++ b/src/components/layouts/footer/footer.css
@@ -3,6 +3,7 @@ footer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 	font-size: 12px;
 	color: var(--footer-color);
 }
